@@ -7,6 +7,8 @@
 #+STARTUP: content
 
 * master(unrelease)
+** New Features
+- Add oh-my-github-trending-repos-mode, browse https://github.com/trending in Emacs
 
 * v0.4.0 (2022-04-25)
 ** New Features
